fixed gap

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav {
 nav > ul {
   list-style: none;
   display: flex;
-  gap: 60px;
+  gap: 55px;
   /* Added this line */
 }
 
